--- a/style/style.css
+++ b/style/style.css
@@ -597,15 +597,7 @@ p{
     position: relative;
     color: aliceblue;
 }
-@media screen and (max-width: 1080px) {
-    .contain{
-        width:80%;
-        position: relative;
-        padding-left:3em;
-        justify-content: space-around;
-    }
-   
-}
+
 .btn{
     margin-left: 90%;
     margin-bottom: 10px;
@@ -624,6 +616,53 @@ p{
     color: #fff;
     display: flex;
     width: 100%;
+}
+
+@media screen and (max-width: 1024px){
+    .contain{
+        width: 93%;
+        position: relative;
+        padding-left: 1em;
+        justify-content: center;
+    }
+    .btn{
+        margin-left: 90%;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .contain{
+        width:100%;
+        position: relative;
+        padding-left:3em;
+        justify-content: space-around;
+    }
+    .btn{
+       margin-left: 85%;
+    } 
+}
+@media screen and (max-width: 625px){
+    .contain{
+        width:90%;
+        position: relative;
+        padding-left:3em;
+        justify-content: space-around;
+    }
+    .btn{
+       margin-left: 75%;
+    } 
+}
+@media screen and (max-width: 425px) {
+   .contain{
+        width:90%;
+        position: relative;
+        padding-left:3em;
+        justify-content: space-around;
+    }
+    .btn{
+       margin-left: 75%;
+    } 
+   
 }
 .container{
     width:1000px;
@@ -713,58 +752,55 @@ p{
 }
 
 /* Responsive rules*/
-@media screen and (max-width: 1024px) {
-    .container{
-        width: 1000px;
-        position: relative;
-        justify-content: space-around;
-    }
-    .container .card .face{
-    width: 200px;
-    height: 200px;
-    transition: 0.5s;
-}
-}
 @media screen and (max-width: 768px) {
     .container{
-        width: 1000px;
         position: relative;
-        justify-content:center;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content:space-between;
+        align-items: center;
+        margin-left: 40px;
     }
     .container .card .face{
-    width: 200px;
-    height: 200px;
-    transition: 0.5s;
+        width: 350px;
+        height: 220px;
+        transition: 0.5s;
 }
 }
-@media screen and (max-width:375px ){
+@media screen and (max-width: 625px) {
+
     .container{
-        width: 600px;
+        position: relative;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content:space-between;
+        align-items: center;
+        margin-left:40px;
     }
     .container .card .face{
-    width: 200px;
-    height: 200px;
-    transition: 0.5s;
+        width: 350px;
+        height: 220px;
+        transition: 0.5s;
+}
+}
+
+@media screen and (max-width: 425px) {
+
+    .container{
+        position: relative;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content:space-between;
+        align-items: center;
+        margin-left:19%;
     }
-    .container .card .face.face1 .content h3{
-    margin: 5px 0 0;
-    padding: 0;
-    color: white;
-    text-align: center;
-    font-size: 1em;
-}
-.container .card .face.face2{
-    position: relative;
-    background: #fff;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 10px;
-    box-sizing: border-box;
-    box-shadow: 0 20px 50px rgba(0,0,0,0.8);
-    transform: translateY(-100px);
+    .container .card .face{
+        width: 350px;
+        height: 220px;
+        transition: 0.5s;
 }
 }
+
 .footer{
     text-align: center;
     padding: 1px 2px;
