--- a/style/style.css
+++ b/style/style.css
@@ -3,7 +3,7 @@
 :root {
   font-size: 16px;
   font-family: 'Overpass',sans-serif;
-  --text-primary: #b6b6b6;
+  --text-primary: #fff;
   --text-secondary: #ececec;
   --bg-primary: #23232e;
   --bg-secondary: #141418;
@@ -627,7 +627,7 @@ body::-webkit-scrollbar-thumb {
   height: 5rem;
   color: var(--text-primary);
   text-decoration: none;
-  filter: grayscale(100%) opacity(0.7);
+  filter: grayscale(100%) opacity(0.9);
   transition: var(--transition-speed);
 }
 
