--- a/computer_vision/style/image.css
+++ b/computer_vision/style/image.css
@@ -9,7 +9,7 @@ body{
 :root {
   font-size: 16px;
   font-family: 'Overpass',sans-serif;
-  --text-primary: #b6b6b6;
+  --text-primary: #fff;
   --text-secondary: #ececec;
   --bg-primary: #23232e;
   --bg-secondary: #141418;
@@ -58,7 +58,7 @@ body::-webkit-scrollbar-thumb {
   height: 5rem;
   color: white;
   text-decoration: none;
-  filter: grayscale(100%) opacity(0.7);
+  filter: grayscale(100%) opacity(0.9);
   transition: var(--transition-speed);
 }
 
