--- a/Resources/style/resources.css
+++ b/Resources/style/resources.css
@@ -236,21 +236,21 @@ p{
 
 .container .box.internet{
     background-color: #37284c;
-background-image: linear-gradient(2deg, #37284c 0%, #ff1f1f 100%);
+    background-image: linear-gradient(2deg, #37284c 0%, #ff1f1f 100%);
 }
 .container .box.paper{
     background-color: #0e5050;
-background-image: linear-gradient(0deg, #0e5050 0%, #43dedb 100%);    
+    background-image: linear-gradient(0deg, #0e5050 0%, #43dedb 100%);    
 }
 
 .container .box.yellow{
      background-color: #5a4718;
-background-image: linear-gradient(0deg, #5a4718 0%, #ffb95c 100%);
+     background-image: linear-gradient(0deg, #5a4718 0%, #ffb95c 100%);
 }
 .container .box.github{
    
     background-color: #37284c;
-background-image: linear-gradient(2deg, #37284c 0%, #593f7c 100%);
+    background-image: linear-gradient(2deg, #37284c 0%, #593f7c 100%);
 
 
 }
@@ -286,6 +286,8 @@ background-image: linear-gradient(2deg, #37284c 0%, #593f7c 100%);
 @media (max-width: 991px){
     .container
     {
+    left: 5%;
+    top: -33px;
     grid-template-columns: repeat(auto-fill,minmax(50%,1fr));
     grid-template-rows:minmax(auto, auto);
     }
@@ -293,6 +295,10 @@ background-image: linear-gradient(2deg, #37284c 0%, #593f7c 100%);
     .container .box{
         grid-column: unset!important;
         grid-row: unset !important;
+    }
+    
+    .container .box{
+        font-size: 12px;
     }
 }
 
